Using csv-parser library instead of my own code. Generated all the shops based on csv. Updated logic to not use special characters in fileName of shops.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 TO DO
-- Have ShopList show up even when screen is smaller than full-screen
+- Sort ShopList by "highlighted shops" (if any)
 - Re-work how all CSS and layout is done
 
 KNOWN ISSUES
