--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,11 @@
 TO DO
 - Sort ShopList by "highlighted shops" (if any)
+- Add icon when side panel is small (mobile size)
+- Come up with shop ideas (based on master list, maybe like 15) with actual item and services
+  - Librarian with books to learn new languages
+  - Blacksmith with weapon sharpening services
+  - Cartographer with maps of the area that could reveal treasure or help with Survival checks moving through the area
+  - etc.
 - Re-work how all CSS and layout is done
 
 KNOWN ISSUES
