--- a/TODO.txt
+++ b/TODO.txt
@@ -8,11 +8,4 @@ TO DO
 
 KNOWN ISSUES
 - Same haggle roll inputted twice in a roll doesn't work
-
-FOR EVERY SHOP
-- Snip-It tool an appropriate image
-  - Add the image to the /assets folder
-- Read through Shops
-  - Highlight important parts
-  - Write up a brief summary of Shop Description / Quest Description
-  - Add descriptions to shop's .json file
+- createShop.js will not copy last shop in CSV
